[package]
name = "pico-os-embassy"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
embassy-embedded-hal = "0.3.0"
embassy-executor = { version = "0.7.0", features = [
    "executor-thread",
    "arch-cortex-m",
    "executor-interrupt",
] }
embassy-futures = "0.1.1"
embassy-rp = { version = "0.3.0", features = [
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp235xa",
    "binary-info",
    "defmt",
] }
embassy-time = { version = "0.4.0" }
embassy-usb = "0.4.0"
heapless = "0.8.0"
static_cell = "2.1.0"
defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[profile.release]
debug = 2

[profile.dev]
lto = true
opt-level = "z"